Ultimos cambios, deber y trabajo en clase

--- a/01-clases/app/src/main/res/values/strings.xml
+++ b/01-clases/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
         <item>Lunes</item>
         <item>Martes</item>
         <item>Miercoles</item>
-    </string-array>>
+    </string-array>
+    >
 
 </resources>
