Examen 2B SQLite and Maps

--- a/02-Deberes/Examen 2B/app/src/main/res/values/strings.xml
+++ b/02-Deberes/Examen 2B/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">APPenMemoria</string>
+    <string name="title_activity_maps_artista">MapsActivityArtista</string>
 </resources>
